fix: navbar z-index추가

--- a/vite-project/src/common/navbar/Navbar.style.css
+++ b/vite-project/src/common/navbar/Navbar.style.css
@@ -6,6 +6,7 @@
   border-bottom: 1px solid #dfdfdf;
   background-color: white;
   padding: 0 200px;
+  z-index: 999;
 }
 .nav {
   width: 100%;
